--- a/templates/home.html
+++ b/templates/home.html
@@ -198,17 +198,15 @@ Think of HaveItAll like the dating app for employment. We match your criteria, v
         <div id="aboutimp" class="col-lg-12"><h2 align="center">What types of jobs are of interest? </h2></div>
 
          <div class="col-lg-4">          
-       <!--   <div class="progress">
-              <div class="progress-bar" style="width:25%; text-transform: uppercase; background-color: #ffc107!important;">
-                1 out of 4 
-              </div>             
-          </div> 
- -->
+       
             <div class="progress">
-              <div class="progress-bar" style="width:25%; text-transform: uppercase;">
-                1 out of 4 
-              </div>             
-          </div>
+              <div class="progress-bar" style="width:25%;">Step 1 of 4</div>   
+              <div class="progress-bar" style="width:25%;background-color: #28a745!important;"></div>
+              <div class="progress-bar" style="width:25%;background-color: #ffc107!important;"></div>
+              <div class="progress-bar" style="width:25%;background-color: #dc3545!important;"></div>
+            </div>
+
+
          </div> 
 
             <div class="col-lg-4">
@@ -245,10 +243,13 @@ Think of HaveItAll like the dating app for employment. We match your criteria, v
         <div class="col-lg-12"><h2 align="center">What do you seek in an employer?</h2></div>
          <div class="col-lg-4">
             <div class="progress">
-              <div class="progress-bar" style="width:50%; text-transform: uppercase;">
-                2 out of 4
-              </div>             
+              <div class="progress-bar" style="width:25%;"></div>   
+              <div class="progress-bar" style="width:25%;background-color: #28a745!important;">Step 2 of 4</div>
+              <div class="progress-bar" style="width:25%;background-color: #ffc107!important;"></div>
+              <div class="progress-bar" style="width:25%;background-color: #dc3545!important;"></div>
             </div>
+
+
          </div>
             <div class="col-lg-4">
       
@@ -295,11 +296,13 @@ Think of HaveItAll like the dating app for employment. We match your criteria, v
         <div class="col-lg-12"><h2 align="center" style="margin-bottom: 8px;">Your Industry(s) </h2></div>
         <div class="col-lg-12"><h2 align="center">What industries do you have experience in?</h2></div>
          <div class="col-lg-4">
-              <div class="progress">
-              <div class="progress-bar" style="width:75%; text-transform: uppercase;">
-                3 out of 4
-              </div>             
+            <div class="progress">
+              <div class="progress-bar" style="width:25%;"></div>   
+              <div class="progress-bar" style="width:25%;background-color: #28a745!important;"></div>
+              <div class="progress-bar" style="width:25%;background-color: #ffc107!important;">Step 3 of 4</div>
+              <div class="progress-bar" style="width:25%;background-color: #dc3545!important;"></div>
             </div>
+
          </div>
             <div class="col-lg-4">
             
@@ -341,10 +344,12 @@ Think of HaveItAll like the dating app for employment. We match your criteria, v
         <div class="col-lg-12"><h2 align="center">Select your experience level by industry</h2></div>
          <div class="col-lg-3">
             <div class="progress">
-              <div class="progress-bar" style="width:100%; text-transform: uppercase;">
-                4 out of 4
-              </div>             
+              <div class="progress-bar" style="width:25%;"></div>   
+              <div class="progress-bar" style="width:25%;background-color: #28a745!important;"></div>
+              <div class="progress-bar" style="width:25%;background-color: #ffc107!important;"></div>
+              <div class="progress-bar" style="width:25%;background-color: #dc3545!important;">Step 4 of 4</div>
             </div>
+
          </div>
             <div class="col-lg-7">
            
