--- a/templates/home.html
+++ b/templates/home.html
@@ -106,12 +106,12 @@ td
    <div class="container">
  <div class="col-lg-12 text-center">
     <div align="center"><img src="public/images/img7.jpg" class="img-responsive"></div>
-    <duv style="padding-bottom_30px;">
+    <div style="padding-bottom:30px;">
     <div class="btn btn-default btn-lg blue_botton">Get connected - it's free</div>
     <div style="color:#0CF">No Resume . No Spam . The Right Connections</div><br/><br/><br/>
     </div>
     </div>
-    </duv>
+    </div>
     </div>
     </div>
     </div>
