--- a/templates/home.html
+++ b/templates/home.html
@@ -243,7 +243,7 @@ Think of HaveItAll like the dating app for employment. We match your criteria, v
         <div class="col-lg-12"><h2 align="center">What do you seek in an employer?</h2></div>
          <div class="col-lg-4">
             <div class="progress">
-              <div class="progress-bar" style="width:25%;"></div>   
+              <div class="progress-bar" style="width:25%;"><img src="public/images/hometike.png" height="20"></div>   
               <div class="progress-bar" style="width:25%;background-color: #28a745!important;">Step 2 of 4</div>
               <div class="progress-bar" style="width:25%;background-color: #ffc107!important;"></div>
               <div class="progress-bar" style="width:25%;background-color: #dc3545!important;"></div>
@@ -297,8 +297,8 @@ Think of HaveItAll like the dating app for employment. We match your criteria, v
         <div class="col-lg-12"><h2 align="center">What industries do you have experience in?</h2></div>
          <div class="col-lg-4">
             <div class="progress">
-              <div class="progress-bar" style="width:25%;"></div>   
-              <div class="progress-bar" style="width:25%;background-color: #28a745!important;"></div>
+              <div class="progress-bar" style="width:25%;"><img src="public/images/hometike.png" height="20"></div>   
+              <div class="progress-bar" style="width:25%;background-color: #28a745!important;"><img src="public/images/hometike.png" height="20"></div>
               <div class="progress-bar" style="width:25%;background-color: #ffc107!important;">Step 3 of 4</div>
               <div class="progress-bar" style="width:25%;background-color: #dc3545!important;"></div>
             </div>
@@ -344,9 +344,9 @@ Think of HaveItAll like the dating app for employment. We match your criteria, v
         <div class="col-lg-12"><h2 align="center">Select your experience level by industry</h2></div>
          <div class="col-lg-3">
             <div class="progress">
-              <div class="progress-bar" style="width:25%;"></div>   
-              <div class="progress-bar" style="width:25%;background-color: #28a745!important;"></div>
-              <div class="progress-bar" style="width:25%;background-color: #ffc107!important;"></div>
+              <div class="progress-bar" style="width:25%;"><img src="public/images/hometike.png" height="20"></div>   
+              <div class="progress-bar" style="width:25%;background-color: #28a745!important;"><img src="public/images/hometike.png" height="20"></div>
+              <div class="progress-bar" style="width:25%;background-color: #ffc107!important;"><img src="public/images/hometike.png" height="20"></div>
               <div class="progress-bar" style="width:25%;background-color: #dc3545!important;">Step 4 of 4</div>
             </div>
 
