--- a/templates/home.html
+++ b/templates/home.html
@@ -160,7 +160,7 @@ HaveItAll is like a dating app for employment.</div>
 <div class="blue_space">
  <div class="row">
   <div class="container">
- <div class="col-lg-6">
+ <div class="col-md-6">
  <div align="center"><h2 style="color:#FFF;">How it works</h2></div>
  
 <table class="white">
@@ -189,7 +189,7 @@ HaveItAll is like a dating app for employment.</div>
 
 </table>
  </div>
- <div class="col-lg-6">
+ <div class="col-md-6">
  <div align="center">
  <h2 class="white">
 WHAT WE DO</h2>
@@ -250,7 +250,7 @@ WHAT WE DO</h2>
 
          </div> 
 
-<div class="col-lg-8 col-lg-offset-4">
+<div class="col-md-8 col-md-offset-4">
             <div  ng-repeat="jobFit in jobFits">               
               <table>
                 <tr>
@@ -288,7 +288,7 @@ WHAT WE DO</h2>
 
 
          </div>
-<div class="col-lg-8 col-lg-offset-4">      
+<div class="col-md-8 col-md-offset-4">      
             <div ng-repeat="employerFit in employerFits">
         
              <table>
@@ -340,7 +340,7 @@ WHAT WE DO</h2>
             </div>
 
          </div>
-            <div class="col-lg-8 col-lg-offset-4">
+            <div class="col-md-8 col-md-offset-4">
             
             <div ng-repeat="industry in industrylist">
                 
