--- a/templates/add_users.html
+++ b/templates/add_users.html
@@ -1,4 +1,8 @@
-
+<!--  ==========================================================================
+Author: BAMADEB UPADHYAYA
+Create date:  05/10/2017
+Description:  Add user page
+=============================================================================  -->
 <!-- About Section -->
 <section class="container content-section text-left">
 
