--- a/templates/changepsw.html
+++ b/templates/changepsw.html
@@ -1,3 +1,8 @@
+<!--  ==========================================================================
+Author: BAMADEB UPADHYAYA
+Create date:  07/10/2017
+Description:  Change password page
+=============================================================================  -->
 
 <section class="container content-section text-center">
   <h3 align="center">Change Password <span> <a href="#!/user/profile//" style="color:##008cc9;float: right;font-size: 12px;">Back</a></span> </h3>
