--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,3 +1,11 @@
+<!-- ==========================================================================
+Author: BISWAJIT PANDA
+Create date:  06/29/2017
+Description:  Dashboard page
+ 
+=============================================================================  -->
+
+
 <style type="text/css">
 md-tabs-canvas {
     display: none !important; 
