--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,3 +1,10 @@
+<!-- ==========================================================================
+Author: BISWAJIT PANDA
+Create date:  06/29/2017
+Description:  Gallery page
+ 
+=============================================================================  -->
+
 <style type="text/css">  
 .gallery { 
   padding: 10px;
