--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,9 @@
+<!-- ==========================================================================
+Author: BISWAJIT PANDA
+Create date:  05/10/2017
+Description:  Login page
  
+=============================================================================  --> 
 <div class="login_back">
 
     <div class="col-md-6 col-md-offset-3 text-right logarea">
