--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,3 +1,9 @@
+<!-- ==========================================================================
+Author: BISWAJIT PANDA
+Create date:  05/19/2017
+Description:  Post page
+ 
+=============================================================================  -->
 <style type="text/css">
   .multiSelect > button {
     text-align: left !important;    
