--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,3 +1,9 @@
+<!-- ==========================================================================
+Author: BISWAJIT PANDA
+Create date:  05/09/2017
+Description:  Profile page
+ 
+=============================================================================  -->
 <script src="public/carouselengine/amazingcarousel.js"></script>
 <link rel="stylesheet" type="text/css" href="public/carouselengine/initcarousel-1.css">
 <script src="public/carouselengine/initcarousel-1.js"></script>
@@ -673,7 +679,7 @@
 
 </section>
 
-<section class="container" ng-if="ProfileInfo.users_type == '1' ">
+          <section class="container" ng-if="ProfileInfo.users_type == '1' ">
               <div class="row backsection" style="cursor: pointer; padding-bottom: 40px;" >
                 <div class="col-lg-8 col-lg-offset-2">
                   <div class="margin10">
