--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,8 @@
-
+<!-- ==========================================================================
+Author: BISWAJIT PANDA
+Create date:  05/10/2017
+Description:  Registration page 
+=============================================================================  --> 
 
 <div id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
