--- a/templates/resetpsw.html
+++ b/templates/resetpsw.html
@@ -1,4 +1,9 @@
-
+<!-- ==========================================================================
+Author: BISWAJIT PANDA
+Create date:  08/10/2017
+Description:  Reset password page
+ 
+=============================================================================  --> 
 <div ng-include="'include/header_signup.html'"></div>
 <!-- Intro Header -->
 <header class="intro" id="terms">
