--- a/templates/companyHome.html
+++ b/templates/companyHome.html
@@ -1,3 +1,9 @@
+<!--  ==========================================================================
+Author: BAMADEB UPADHYAYA
+Create date:  05/11/2017
+Description:  Company home page
+=============================================================================  -->
+
 <!-- <div ng-include="'include/top.html'"></div> -->
 <!-- About Section -->
 <section class="container content-section text-center">
