--- a/include/footer_home.html
+++ b/include/footer_home.html
@@ -9,6 +9,18 @@
     padding: 0px;
     background: #fff!important;
    }
+   .right1
+   {
+	   margin-right:30px;
+   }
+   @media only screen and (min-device-width:320px) and (max-device-width:767px)
+{
+	   .right1
+   {
+	   margin-right:25px!important;
+   }
+	
+}
    </style>
     <div>
     <footer>
@@ -19,10 +31,10 @@
         <div class="container" style="padding-top:20px;">
  <div class="col-lg-12 text-center">
   
-<img src="public/images/8facebook.png" height="40" style="margin-right:10px;">
-<img src="public/images/8twitter.png" height="40" style="margin-right:10px;">
-<img src="public/images/8linkedin.png" height="40" style="margin-right:10px;">
-<img src="public/images/8phone.png" height="40" style="margin-right:10px;">
+<img src="public/images/8facebook.png" height="40" class="right1">
+<img src="public/images/8twitter.png" height="40" class="right1">
+<img src="public/images/8linkedin.png" height="40" class="right1">
+<img src="public/images/8phone.png" height="40" class="right1">
 <img src="public/images/8email.png" height="40">
 
  </div>
