Bamadeb : profile page

--- a/templates/appHome.html
+++ b/templates/appHome.html
@@ -1,4 +1,10 @@
 <!-- <div ng-include="'include/top.html'"></div> -->
+
+<style type="text/css">
+  .modal-sm{
+     top:30% !important;
+  }
+</style>
 <!-- About Section -->
 <section class="container content-section text-center">
 <!--    <h2> USER DASHBOARD</h2>
